# echemistpy

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Echem.ipynb  LICENSE  MANIFEST.in  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PACKAGE_SUMMARY.md  QUICKSTART.md  README.en.md  README.md  README_PACKAGE.md  REFACTORING_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  data.ipynb  environment.yml  lanhe_reader.py  pyproject.toml  setup.py  test_biologic_reader.ipynb  test_h5.py  test_mspd_reader.ipynb  test_reader.py  verify_biologic_reading.ipynb  verify_optimization.py
.github/: copilot-instructions.md
Characterization/STXM/: 04 - Model fitting.ipynb
docs/: IMPLEMENTATION_SUMMARY.md  IO_Modules_Design.md  PLUGIN_SYSTEM.md  README.md  conf.py  index.rst
docs/Characterization/EQCM/: EQCM.ipynb
docs/Characterization/SEM/: SEM.ipynb
docs/Characterization/STXM/: STXM copy.ipynb  sTXM-Mn.ipynb  sTXM-Zn.ipynb  sTXM.ipynb  sTXM_AA.ipynb
docs/Characterization/XRD/: XRD_MSPD_2025.ipynb
docs/api/: io.rst  io_base_reader.rst  io_column_mappings.rst  io_loaders.rst  io_plugin_manager.rst  io_reader_utils.rst  io_saver.rst  io_standardizer.rst  io_structures.rst  processing.rst
docs/developer_guide/: index.rst
docs/examples/XAS/Data/Foils/: 20251211_123329_log.txt  20251211_123725_log.txt  20251211_125240_log.txt  20251211_125510_log.txt  20251211_125851_log.txt  20251212_144812_log.txt  20251212_150617_log.txt
docs/examples/XAS/Data/Operando1/: 20251211_150730_log.txt  20251211_150841_log.txt  20251211_153433_log.txt  20251211_155945_log.txt  20251211_162730_log.txt  20251211_165402_log.txt  20251211_171913_log.txt  20251211_174424_log.txt  20251211_180940_log.txt  20251211_183452_log.txt  20251211_190007_log.txt  20251211_192522_log.txt  20251211_193314_log.txt  20251211_195833_log.txt  20251211_202342_log.txt  20251211_204857_log.txt  20251211_211409_log.txt  (+33 more)
docs/examples/echem/folder/: aa.mpt
docs/test-report/: io-integration-test-report.md
docs/user_guide/: index.rst
echemistpy/: __init__.py
echemistpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
echemistpy/core/: __init__.py  base.py  exceptions.py
echemistpy/io/: __init__.py  loaders.py
echemistpy/techniques/: __init__.py  echem.py  eqcm.py  icp_oes.py  sem.py  stxm.py  tem.py  tga.py  xas.py  xps.py  xrd.py
echemistpy/utils/: __init__.py  data_processing.py  validation.py
echemistpy/visualization/: __init__.py  plotting.py
examples/: basic_usage.py  usage_example.py  verify_mpr_pipeline.ipynb
examples/echem/: Biologic_EIS.mpr  Biologic_EIS.mpt  Biologic_GPCL.mpr  LANHE_GPCL.ccs
notebooks/: README_COLAB.md  test_echem_analyzer.ipynb  test_stxm_analyzer (1).ipynb  test_stxm_analyzer.ipynb
src/echemistpy/: __init__.py  registry.py
src/echemistpy/analysis/: __init__.py  base.py  echem.py  registry.py  xps.py  xrd.py
src/echemistpy/analysis/xas/: processing.py
src/echemistpy/io/: README.md  __init__.py  base_reader.py  column_mappings.py  loaders.py  organization.py  plugin_manager.py  plugin_specs.py  plugins.py  reader_utils.py  save.py  saver.py  standardizer.py  structures.py
src/echemistpy/io/plugings/: generic_loaders.py  generic_savers.py
src/echemistpy/io/plugins/: Echem_BiologicMPTReader.py  Echem_LanheXLSXReader.py  TXM_MISTRAL.py  XAS_CLAESS.py  XRD_MSPD.py
src/echemistpy/io/reading/: __init__.py  base.py  registry.py
src/echemistpy/io/reorganization/: __init__.py
src/echemistpy/math/: __init__.py
src/echemistpy/pipelines/: __init__.py  manager.py  orchestrator.py
src/echemistpy/ploting/: __init__.py
src/echemistpy/preprocessing/: __init__.py  analysis.py  normalization.py
src/echemistpy/processing/: AGENTS.md  __init__.py  analysis.py  manager.py  normalization.py  pipeline.py
src/echemistpy/processing/analysis/: __init__.py  registry.py  tga.py
src/echemistpy/processing/analyzers/: __init__.py  base.py  echem.py  registry.py  stxm.py  tga.py  xas.py  xps.py  xrd.py
src/echemistpy/processing/math/: fitting.py
src/echemistpy/processing/preprocessing/: xas.py
src/echemistpy/utils/: __init__.py
src/echemistpy/utils/echem/: BiologicMPTReader.py  LanheXLSXReader.py
src/echemistpy/utils/math/: __init__.py
src/echemistpy/utils/plotting/: __init__.py  echemfig.py
src/echemistpy/utils/visualization/: __init__.py  plotters.py
src/echemistpy/visualization/: plot_xas.py
test/: README.md  TESTING_GUIDE_CN.md  conftest.py  test_io_loaders.py  test_io_plugin_manager.py  test_io_saver.py  test_io_standardizer.py  test_io_structures.py
tests/: test_biologic_reader.py  test_doctests.py  test_echem_readers_comprehensive.py  test_io_comprehensive.py  test_lanhe_reader.py  test_nexus_structures.py  test_placeholder.py  test_plotting_echemfig.py  test_registry.py  test_verify_echem_pipeline.py
tests/integration/: test_io_with_real_data.py
tests/io/: test_structures_helpers.py
tests/test_io/: __init__.py  test_column_mappings.py
tests/test_io/benchmarks/: test_standardizer_performance.py
(+445 files in other folders)
