[project]
name = "echemistpy"
version = "0.1.0"
description = "Cheng Liu, PhD"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "exspy>=0.3.2",
    "h5netcdf>=1.6.3",
    "hyperspy[all]>=2.3.0",
    "ipykernel>=6.30.0",
    "ipympl>=0.9.7",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "netcdf4>=1.7.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ruff>=0.12.4",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sparse>=0.17.0",
    "spectrochempy==0.7.1",
    "xarray>=2025.6.1",
    "uncertainties>=3.2.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.ruff]
line-length = 200
preview = true

[tool.ruff.lint]
select = [
    # Pyflakes
    "F", # Pyflakes rules (F821 checks undefined names)

    # Pycodestyle
    "E", # Error-level PEP 8 rules
    "W", # Warning-level PEP 8 rules

    # flake8 plugins
    "G",   # flake8-logging-format rules
    "B",   # flake8-bugbear rules
    "C4",  # flake8-comprehensions rules
    "N",   # pep8-naming rules
    "SIM", # flake8-simplify rules
    "ARG", # flake8-unused-arguments
    "ERA", # eradicate (commented out code)
    "PL",  # pylint rules
    "RUF", # Ruff-specific rules

    # Security
    "S", # flake8-bandit (security)
]
extend-select = ["I"] # isort
ignore = ["E501", "PLR2004", "ERA001", "RUF001"]

# Logger objects that should be checked
logger-objects = ["app.logger", "logger"]
